--- a/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
+++ b/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 18:23:37 GMT
+    - Tue, 27 Mar 2018 22:58:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5RhiF%2CXqpDmSiIZePadkU3; path=/
+    - PHPSESSID=LK59DnD%2CsoZGQqjvc%2C3-F0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 18:23:37 GMT
+recorded_at: Tue, 27 Mar 2018 22:58:36 GMT
