--- a/www.nass.gov.ng/8d41c26dff5703de26b8d01e4efae85b552d0339.yml
+++ b/www.nass.gov.ng/8d41c26dff5703de26b8d01e4efae85b552d0339.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 18:32:19 GMT
+    - Wed, 28 Mar 2018 03:43:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ly7iJ2CAPAke-pHBEC0M42; path=/
+    - PHPSESSID=KZ9TF%2CCh5hXJbtnRMp7bB3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 18:32:19 GMT
+recorded_at: Wed, 28 Mar 2018 03:43:33 GMT
