--- a/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
+++ b/www.nass.gov.ng/72da7ce3d6f8034f2dc9240a7c7f27d3d5d9b01e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 18:35:00 GMT
+    - Wed, 28 Mar 2018 03:45:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4m7fgWHswH6B%2CK3-2440%2C1; path=/
+    - PHPSESSID=k03M0lyP%2CNR-94vhZKm-w1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 18:35:00 GMT
+recorded_at: Wed, 28 Mar 2018 03:45:00 GMT
