--- a/www.nass.gov.ng/6567f12767ab7c8182d32c5528e63f0d7b217854.yml
+++ b/www.nass.gov.ng/6567f12767ab7c8182d32c5528e63f0d7b217854.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:44:14 GMT
+    - Wed, 28 Mar 2018 05:51:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8Fr8GbkhPnDyjWk%2CXQa7K1; path=/
+    - PHPSESSID=VI2k8xvh2W43bJzhkZjG40; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:44:14 GMT
+recorded_at: Wed, 28 Mar 2018 05:51:51 GMT
