--- a/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
+++ b/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:57:42 GMT
+    - Wed, 28 Mar 2018 06:03:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5%2CWu2XUm%2CwmO0f5T3JW2P1; path=/
+    - PHPSESSID=G6atWpn8GrcyU3Xq-2W820; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:57:42 GMT
+recorded_at: Wed, 28 Mar 2018 06:03:00 GMT
