--- a/www.nass.gov.ng/a53e8dcb5212ecccb4366fee021d13243657beba.yml
+++ b/www.nass.gov.ng/a53e8dcb5212ecccb4366fee021d13243657beba.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 20:58:51 GMT
+    - Wed, 28 Mar 2018 06:04:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nmtwSqGS4jg8Uj0OEEYdg1; path=/
+    - PHPSESSID=YUXQIJPv8X%2C6GSIvdIevY3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 20:58:52 GMT
+recorded_at: Wed, 28 Mar 2018 06:04:16 GMT
