--- a/www.nass.gov.ng/df3f96dad724d99ad09a61cfba1d034fde74ad29.yml
+++ b/www.nass.gov.ng/df3f96dad724d99ad09a61cfba1d034fde74ad29.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:12:07 GMT
+    - Wed, 28 Mar 2018 06:14:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=P%2CHehtFztEaNthTduFG191; path=/
+    - PHPSESSID=yKNZvW2gQt1UrDdHRkGnA3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:12:07 GMT
+recorded_at: Wed, 28 Mar 2018 06:14:28 GMT
