--- a/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
+++ b/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:21:23 GMT
+    - Wed, 28 Mar 2018 06:24:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7OU609btmVfzN%2CV8JNqZI2; path=/
+    - PHPSESSID=uKvAXDcx4acq7J7JkICi01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:21:23 GMT
+recorded_at: Wed, 28 Mar 2018 06:24:05 GMT
