--- a/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
+++ b/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:23:06 GMT
+    - Wed, 28 Mar 2018 06:26:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LmVlMhafQqT6H%2CSs8pVbv2; path=/
+    - PHPSESSID=DX1hZeTLYF3NKyE7sndeI0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:23:07 GMT
+recorded_at: Wed, 28 Mar 2018 06:26:08 GMT
