--- a/www.nass.gov.ng/0e7a2e14145465f85cd9b1cf1bcffd4fe363b06f.yml
+++ b/www.nass.gov.ng/0e7a2e14145465f85cd9b1cf1bcffd4fe363b06f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:36:01 GMT
+    - Wed, 28 Mar 2018 06:36:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gcWANQEcbWMovD0H9JFGj0; path=/
+    - PHPSESSID=BD95AtqYGE1ZKeOFh2VG%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:36:01 GMT
+recorded_at: Wed, 28 Mar 2018 06:36:05 GMT
