--- a/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
+++ b/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:40:22 GMT
+    - Wed, 28 Mar 2018 06:42:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FtbRIhZr8ynIeGy65rB7m0; path=/
+    - PHPSESSID=0QZlLa5CC7%2CCILC4sRNv20; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:40:22 GMT
+recorded_at: Wed, 28 Mar 2018 06:42:28 GMT
