--- a/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
+++ b/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:50:51 GMT
+    - Wed, 28 Mar 2018 06:51:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HQbB9IwzX5Q6Qg6j6Y%2CvR0; path=/
+    - PHPSESSID=3m777PBnUONL4y52heLnP0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:50:51 GMT
+recorded_at: Wed, 28 Mar 2018 06:51:38 GMT
