--- a/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
+++ b/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 21:52:36 GMT
+    - Wed, 28 Mar 2018 06:52:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QDp%2CXz9JpIFA1RSVyxsEt3; path=/
+    - PHPSESSID=LEjDBnin4m7nxsdNdiCoU1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 21:52:36 GMT
+recorded_at: Wed, 28 Mar 2018 06:52:16 GMT
