--- a/www.nass.gov.ng/b5e484d0568d920fb05c4be6375ddfd0c8326adb.yml
+++ b/www.nass.gov.ng/b5e484d0568d920fb05c4be6375ddfd0c8326adb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:04:02 GMT
+    - Wed, 28 Mar 2018 07:04:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SlIen4NXeBx%2CSBDf4pDhT3; path=/
+    - PHPSESSID=SBZogWTRXW6Cxkli7GlZV3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:04:02 GMT
+recorded_at: Wed, 28 Mar 2018 07:04:29 GMT
