--- a/www.nass.gov.ng/6ba51b6e9f8d5841fd8ba0e495af9646e6b35720.yml
+++ b/www.nass.gov.ng/6ba51b6e9f8d5841fd8ba0e495af9646e6b35720.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:04:56 GMT
+    - Wed, 28 Mar 2018 07:04:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Y4Epn%2CdYRZEL1qgkj%2CfHK1; path=/
+    - PHPSESSID=DzjK8T0yBTMDuN8gfNaaD3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:04:56 GMT
+recorded_at: Wed, 28 Mar 2018 07:04:48 GMT
