--- a/www.nass.gov.ng/9a333c17d31253c1b997daf0bf4c20afb83ee9ca.yml
+++ b/www.nass.gov.ng/9a333c17d31253c1b997daf0bf4c20afb83ee9ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 27 Mar 2018 22:05:49 GMT
+    - Wed, 28 Mar 2018 07:05:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=36NzgG5fIGjXXH4HTDA7%2C2; path=/
+    - PHPSESSID=rUhDjt811mKewWNl2ocWC1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 27 Mar 2018 22:05:50 GMT
+recorded_at: Wed, 28 Mar 2018 07:05:26 GMT
